Created assets forlder for styles and javascript. Populated some HTML dynamically with jS

--- a/assets/style.css
+++ b/assets/style.css
@@ -34,6 +34,7 @@ textarea {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+  margin-bottom: 35px;
 }
 
 .hour {
@@ -69,3 +70,4 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
